--- a/Tokamak Interpretation/GIF/BETASTAR_RHO_NUSTAR.ipynb
+++ b/Tokamak Interpretation/GIF/BETASTAR_RHO_NUSTAR.ipynb
@@ -114,6 +114,9 @@
     "DB5.insert(loc=2,column=\"label_joe\",value=[\"Unaffected\"]*len(DB5))\n",
     "DB5.loc[(DB5[DB5.id.isin(min_subset_ids_joe.id)].index), \"label_joe\"] = \"Decreasing\"\n",
     "\n",
+    "DB5.insert(loc=2,column=\"Spherical\",value=[\"No Spherical\"]*len(DB5))\n",
+    "DB5.loc[(DB5[DB5.TOK.isin(['START','MAST','NSTX'])].index), \"Spherical\"] = \"Spherical\"\n",
+    "\n",
     "DB5.insert(0, 'intercept', np.ones(len(DB5)))\n",
     "\n",
     "\n",
@@ -135,6 +138,36 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "19e12688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB5 = tokamakTK.clean_categorical_data(DB5)\n",
+    "# Needed for Improved Visualization: 2D and 3D Plots\n",
+    "HUE_ORDER, PX_ORDER = tokamakTK.get_colors_per_category(DB5)\n",
+    "hue_order = HUEOrder(HUE_ORDER)\n",
+    "\n",
+    "# ---------------------------------------------------\n",
+    "\n",
+    "# SPECIAL PARAMETERS\n",
+    "colors_ = sns.color_palette('tab20', 20)\n",
+    "HUE_ORDER[\"Spherical\"] = dict(zip(sorted(DB5[\"Spherical\"].unique()), colors_[:len(DB5[\"Spherical\"].unique())]))\n",
+    "HUE_ORDER[\"label_joe\"] = dict(zip(sorted(DB5[\"label_joe\"].unique()), colors_[:len(DB5[\"label_joe\"].unique())]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cdd5a0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HUE_ORDER[\"TOK\"][\"START\"] = (0.8235, 0.5055, 0.4412)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "16cd334c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "297f948b",
    "metadata": {},
    "outputs": [],
@@ -176,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4611ddfd",
    "metadata": {},
    "outputs": [],
@@ -189,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "450c90c3",
    "metadata": {},
    "outputs": [],
@@ -201,18 +234,22 @@
     "    alpha = np.round(ALPHAs[i],2)\n",
     "    \n",
     "    data = db5.copy()\n",
-    "    \n",
-    "    HUE_ORDER, PX_ORDER = tokamakTK.get_colors_per_category(data)\n",
     "    category_colors = HUE_ORDER[\"TOK\"]\n",
     "\n",
     "    x,y,z = \"NUSTAR\", \"RHOSTAR\", \"BETASTAR\"\n",
     "    data[\"colors\"] = data[\"TOK\"].map(category_colors)\n",
     "\n",
     "    # Plot the data points\n",
-    "    scatter = ax.scatter(data[x], data[y], data[z], c=data[\"colors\"].values)\n",
+    "    ax.scatter(data[x], data[y], data[z], c=data[\"colors\"].values)\n",
     "    ax.set_xlabel(x, fontsize=12, labelpad=10)\n",
-    "    ax.set_ylabel(y, fontsize=12, labelpad=10)\n",
-    "    ax.set_zlabel(z, fontsize=12, rotation=0)  # Increase the labelpad to make it more visible\n",
+    "    ax.set_ylabel(y, fontsize=12, labelpad=20)\n",
+    "    ax.set_zlabel(z, fontsize=12,  rotation=90)  \n",
+    "    ax.tick_params(axis='x', labelsize=10)\n",
+    "    ax.tick_params(axis='y', labelsize=10)\n",
+    "    ax.tick_params(axis='z', labelsize=10)\n",
+    "    \n",
+    "    ax.set_yticks(ax.get_yticks())\n",
+    "    ax.set_yticklabels(ax.get_yticks(), rotation=45)\n",
     "    \n",
     "    # Add a legend\n",
     "    legend_elements = []\n",
@@ -221,26 +258,20 @@
     "                                          color='w', label=category, markerfacecolor=color, markersize=7))\n",
     "\n",
     "    legend = ax.legend(handles=legend_elements, frameon=False,\n",
-    "                       loc='upper right', bbox_to_anchor=(1.2, 0.9), fontsize=8)\n",
-    "\n",
-    "\n",
-    "    ax.tick_params(axis='x', labelsize=12)  # x-axis ticks\n",
-    "    ax.tick_params(axis='y', labelsize=12)  # y-axis ticks\n",
-    "    ax.tick_params(axis='z', labelsize=12)  # z-axis ticks\n",
-    "\n",
-    "    #fig.set_size_inches(16,13) \n",
-    "    ax.view_init(elev=25, azim=23)\n",
+    "                       loc='upper right', bbox_to_anchor=(1.34, 0.9), fontsize=8)\n",
+    "    \n",
+    "    ax.view_init(elev=23, azim=7)\n",
     "\n",
     "    \n",
     "    if saveFig:\n",
-    "        plt.tight_layout()\n",
+    "        #plt.tight_layout()\n",
     "        plt.savefig(path+file_name, format=\"png\", dpi=800)\n",
     "        #plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "88e98b64",
    "metadata": {},
    "outputs": [],
@@ -249,7 +280,7 @@
     "    # Create a figure and a 3D axis\n",
     "    fig = plt.figure()\n",
     "    ax = fig.add_subplot(111, projection='3d')\n",
-    "    alpha = np.round(ALPHAs[i],2)\n",
+    "    #alpha = np.round(ALPHAs[i],2)\n",
     "    \n",
     "    data = db5.copy()\n",
     "    \n",
@@ -272,48 +303,49 @@
     "    \n",
     "    ax.set_yticks(ax.get_yticks())\n",
     "    ax.set_yticklabels(ax.get_yticks(), rotation=45)\n",
-    "\n",
-    "    ax.view_init(elev=17, azim=32) \n",
     "    \n",
-    "    ax.text(4.3, 0, max(data[z]*1.4), 'Decreasing', color='red', fontsize=15)\n",
-    "    ax.text(4.3, 0, max(data[z]*1.5), 'Unaffected', color='black', fontsize=15)\n",
-    "    ax.text(4.29, 0, max(data[z]*1.6), f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=17)\n",
+    "    ax.view_init(elev=23, azim=i) \n",
+    "    \n",
+    "    #ax.text(max(data[x])*2, -min(data[y])*4.7, max(data[z]*1.9), 'Decreasing', color='red', fontsize=15)\n",
+    "    #ax.text(max(data[x])*2, -min(data[y])*4.7, max(data[z]*2), 'Unaffected', color='black', fontsize=15)\n",
+    "    #ax.text(max(data[x])*2, -min(data[y])*4.7, max(data[z]*2.15), f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=17)\n",
     "    \n",
     "    if saveFig:\n",
-    "        plt.tight_layout()\n",
+    "        #plt.tight_layout()\n",
     "        plt.savefig(path+file_name)\n",
+    "        #plt.savefig(path+file_name, format=\"png\", dpi=800)\n",
     "        plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "83c91491",
    "metadata": {},
    "outputs": [],
    "source": [
     "# EMEMBER TO DELETE THE test.png\n",
-    "#get_3D_plot_DB5_TOK(DB5, 15, IDs[15], True, \"TOK/3D_BETASTAR_NUSTAR_RHOSTAR.png\")\n",
-    "#get_3D_gif_DB5(DB5, 15, min_subset_ids_joe, True, \"test\", removeSPH=True)"
+    "#get_3D_plot_DB5_TOK(DB5, -1, IDs[-1], True, \"TOK_test\")\n",
+    "get_3D_gif_DB5(DB5, -1, IDs[-1], True, \"test\", removeSPH=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "149f6d96",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "for i, indxs in enumerate(IDs):\n",
-    "    file_name = f\"GIF_images/image_{i}.png\"\n",
-    "    get_3D_gif_DB5(DB5, i, indxs, True, file_name)"
+    "for r in range(360//2):\n",
+    "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
+    "    get_3D_gif_DB5(DB5, int(r), IDs[-1], True, file_name, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "433322dc",
    "metadata": {},
    "outputs": [],
@@ -322,15 +354,18 @@
     "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"BETASTAR\"\n",
     "\n",
     "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
-    "output_file = f'change_in_{x}_{y}_{z}.gif'  # Output file name\n",
+    "output_file = f'ROTATION_change_in_{x}_{y}_{z}.gif'  # Output file name\n",
     "\n",
     "# Get a list of PNG files in the folder\n",
     "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
     "# Sort the image files by their numerical values in the filenames\n",
     "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
     "\n",
-    "# Save the images in the folder as an animated GIF\n",
-    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=5)"
+    "# Save the images in the folder as an animated GIF ||| DOTS\n",
+    "#imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=5)\n",
+    "\n",
+    "# Save the images in the folder as an animated GIF ||| ROTATION\n",
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=9)"
    ]
   },
   {
@@ -361,6 +396,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fbe2817c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ee1938",
    "metadata": {},
    "outputs": [],
    "source": []
