--- a/Tokamak Interpretation/GIF/RHO_NUSTAR_Q95.ipynb
+++ b/Tokamak Interpretation/GIF/RHO_NUSTAR_Q95.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7f7f3b44",
    "metadata": {},
    "outputs": [
@@ -114,6 +114,9 @@
     "DB5.insert(loc=2,column=\"label_joe\",value=[\"Unaffected\"]*len(DB5))\n",
     "DB5.loc[(DB5[DB5.id.isin(min_subset_ids_joe.id)].index), \"label_joe\"] = \"Decreasing\"\n",
     "\n",
+    "DB5.insert(loc=2,column=\"Spherical\",value=[\"No Spherical\"]*len(DB5))\n",
+    "DB5.loc[(DB5[DB5.TOK.isin(['START','MAST','NSTX'])].index), \"Spherical\"] = \"Spherical\"\n",
+    "\n",
     "DB5.insert(0, 'intercept', np.ones(len(DB5)))\n",
     "\n",
     "\n",
@@ -134,7 +137,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "9ab13954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB5 = tokamakTK.clean_categorical_data(DB5)\n",
+    "# Needed for Improved Visualization: 2D and 3D Plots\n",
+    "HUE_ORDER, PX_ORDER = tokamakTK.get_colors_per_category(DB5)\n",
+    "hue_order = HUEOrder(HUE_ORDER)\n",
+    "\n",
+    "# ---------------------------------------------------\n",
+    "\n",
+    "# SPECIAL PARAMETERS\n",
+    "colors_ = sns.color_palette('tab20', 20)\n",
+    "HUE_ORDER[\"Spherical\"] = dict(zip(sorted(DB5[\"Spherical\"].unique()), colors_[:len(DB5[\"Spherical\"].unique())]))\n",
+    "HUE_ORDER[\"label_joe\"] = dict(zip(sorted(DB5[\"label_joe\"].unique()), colors_[:len(DB5[\"label_joe\"].unique())]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "16cd334c",
    "metadata": {},
    "outputs": [],
@@ -155,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "297f948b",
    "metadata": {},
    "outputs": [],
@@ -176,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4611ddfd",
    "metadata": {},
    "outputs": [],
@@ -189,165 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "450c90c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_3D_plot_DB5_TOK(i, indxs, saveFig = False, file_name=\"\"):\n",
-    "    # Create a figure and a 3D axis\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "    alpha = np.round(ALPHAs[i],2)\n",
-    "    \n",
-    "    HUE_ORDER, PX_ORDER = tokamakTK.get_colors_per_category(DB5)\n",
-    "    category_colors = HUE_ORDER[\"TOK\"]\n",
-    "\n",
-    "    x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
-    "    DB5[\"colors\"] = DB5[\"TOK\"].map(category_colors)\n",
-    "\n",
-    "    # Plot the data points\n",
-    "    scatter = ax.scatter(DB5[x], DB5[y], DB5[z], c=DB5[\"colors\"].values)\n",
-    "    ax.set_xlabel(x, fontsize=13.7, labelpad=14)\n",
-    "    ax.set_ylabel(y, fontsize=13.7, labelpad=20)\n",
-    "    ax.set_zlabel(z, fontsize=13.7,  rotation=90)  \n",
-    "    ax.tick_params(axis='x', labelsize=13)\n",
-    "    ax.tick_params(axis='y', labelsize=13)\n",
-    "    ax.tick_params(axis='z', labelsize=13)\n",
-    "    \n",
-    "    # Add a legend\n",
-    "    legend_elements = []\n",
-    "    for category, color in category_colors.items():\n",
-    "        legend_elements.append(plt.Line2D([0], [0], marker='o', \n",
-    "                                          color='w', label=category, markerfacecolor=color, markersize=7))\n",
-    "\n",
-    "    legend = ax.legend(handles=legend_elements, frameon=False,\n",
-    "                       loc='upper right', bbox_to_anchor=(1.2, 0.9), fontsize=8)\n",
-    "\n",
-    "    #fig.set_size_inches(16,13) \n",
-    "    ax.view_init(elev=23, azim=0)\n",
-    "\n",
-    "    \n",
-    "    if saveFig:\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(path+file_name, format=\"pdf\", dpi=800)\n",
-    "        #plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88e98b64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_3D_gif_DB5(DB5, i, indxs, rotation=20, removeSPHE=False, zoom=False, saveFig = False, file_name=\"\"):\n",
-    "    # Create a figure and a 3D axis\n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "    alpha = np.round(ALPHAs[i],2)\n",
-    "    \n",
-    "    data=DB5.copy()\n",
-    "    \n",
-    "    if zoom:\n",
-    "        data = data[data[\"RHOSTAR\"] <= 0.01]\n",
-    "        data = data[data[\"NUSTAR\"] <= 1]\n",
-    "        data = data[data[\"Q95\"] <= 6]\n",
-    "    \n",
-    "    if removeSPHE:\n",
-    "        data = data[~data[\"TOK\"].isin(['START','MAST','NSTX'])]\n",
-    "\n",
-    "    x,y,z = \"RHOSTAR\", \"NUSTAR\", \"Q95\"\n",
-    "    data[\"colors\"] = [\"black\"]*len(data)\n",
-    "    data.loc[(data[data.id.isin(indxs.id.values)].index), \"colors\"] = \"red\"\n",
-    "\n",
-    "    # Plot the data points\n",
-    "    ax.scatter(data[x], data[y], data[z], c=data[\"colors\"].values)\n",
-    "    ax.set_xlabel(x, fontsize=13.7, labelpad=14)\n",
-    "    ax.set_ylabel(y, fontsize=13.7, labelpad=20)\n",
-    "    ax.set_zlabel(z, fontsize=13.7,  rotation=90)  \n",
-    "    ax.tick_params(axis='x', labelsize=13)\n",
-    "    ax.tick_params(axis='y', labelsize=13)\n",
-    "    ax.tick_params(axis='z', labelsize=13)\n",
-    "\n",
-    "    ax.view_init(elev=25, azim=rotation) \n",
-    "    \n",
-    "    ax.text(4.3, 0, 18, 'Decreasing', color='red', fontsize=15)\n",
-    "    ax.text(4.3, 0, 17, 'Unaffected', color='black', fontsize=15)\n",
-    "    ax.text(4.29, 0, 19.3, f\"$\\\\alpha_R \\\\sim$ {alpha}\", color='black', fontsize=17)\n",
-    "    \n",
-    "    if saveFig:\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(path+file_name)\n",
-    "        plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83c91491",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EMEMBER TO DELETE THE test.png\n",
-    "get_3D_plot_DB5_TOK(15, IDs[15], True, \"TOK/3D_NUSTAR_RHOSTAR_Q95.pdf\")\n",
-    "#get_3D_gif_DB5(15, IDs[15], True, \"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2e0e7a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get_3D_gif_DB5(DB5, -1, IDs[-1], removeSPHE = False, zoom=True, saveFig = False, file_name=\"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "149f6d96",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"for i, indxs in enumerate(IDs):\n",
-    "    file_name = f\"GIF_images/image_{i}.png\"\n",
-    "    get_3D_gif_DB5(DB5, -1, IDs[-1], removeSPHE = False, zoom=True, saveFig = True, file_name=file_name)\"\"\";\n",
-    "\n",
-    "\"\"\"for r in np.linspace(0,360, 360//2):\n",
-    "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
-    "    get_3D_gif_DB5(DB5, -1, IDs[-1], rotation=int(r), removeSPHE = False, zoom=False, saveFig = True, file_name=file_name)\"\"\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "433322dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"# HEAVY GIF (amount = 750)\n",
-    "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
-    "\n",
-    "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
-    "output_file = f'Zoom_rotationchange_in_{x}_{y}_{z}.gif'  # Output file name\n",
-    "\n",
-    "# Get a list of PNG files in the folder\n",
-    "image_files = [os.path.join(image_folder, file) for file in os.listdir(image_folder) if file.endswith('.png')]\n",
-    "# Sort the image files by their numerical values in the filenames\n",
-    "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
-    "\n",
-    "# Save the images in the folder as an animated GIF\n",
-    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)\"\"\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "4367ca67",
+   "execution_count": 10,
+   "id": "3d7a5604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "15cbeb10",
+   "execution_count": 11,
+   "id": "c19880dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,24 +270,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "9e251e9c",
+   "cell_type": "markdown",
+   "id": "3faa9377",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "## For Rotation\n",
+    "\n",
+    "```Python\n",
     "for r in np.linspace(0,360, 360//2):\n",
     "    file_name = f\"GIF_images/image_{int(r)}.png\"\n",
-    "    get_3D_gif_DB5_label(DB5, int(r), min_subset_ids_6357, saveFig=True, file_name=file_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "a26b98d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    get_3D_gif_DB5_label(DB5, int(r), min_subset_ids_6357, saveFig=True, file_name=file_name)\n",
+    "\n",
     "x,y,z = \"NUSTAR\", \"RHOSTAR\", \"Q95\"\n",
     "\n",
     "image_folder = path+\"GIF_images/\"  # Path to the folder containing the images\n",
@@ -433,12 +292,13 @@
     "image_files.sort(key=lambda x: int(os.path.splitext(os.path.basename(x))[0].split('_')[-1]))\n",
     "\n",
     "# Save the images in the folder as an animated GIF\n",
-    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)"
+    "imageio.mimsave(output_file, [imageio.imread(file) for file in image_files], fps=7)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "id": "eb0a1da8",
    "metadata": {},
    "outputs": [],
@@ -487,17 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "fd1ab9f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_3D_plot_DB5_tauth(DB5, min_subset_ids_6357, saveFig=True, file_name=\"test_tauth.pdf\")"
+    "#get_3D_plot_DB5_tauth(DB5, min_subset_ids_6357, saveFig=True, file_name=\"test_tauth.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "34f04114",
    "metadata": {},
    "outputs": [],
@@ -551,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "069d562b",
    "metadata": {},
    "outputs": [],
@@ -562,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6355c66f",
+   "id": "01514efe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -570,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112b811c",
+   "id": "e50f49eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -578,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65656037",
+   "id": "bf50c2ff",
    "metadata": {},
    "outputs": [],
    "source": []
