--- a/Tokamak Interpretation/BRNQ.ipynb
+++ b/Tokamak Interpretation/BRNQ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "898a73b9",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "66ee799d",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5696ebce",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a980a877",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        " 'MEFF': 2.554}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf9ded9e",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b7c57dea",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "247aeef5",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "6453e1ba",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "34052697",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "91dd702a",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "8a6ff096",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "(-3.09, -1.8)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "eb2bd9e5",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "(-1.31, -2.63)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "8e32560b",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "(-1.5, -2.08)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "5a8b4aa2",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "10.353061437233006"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "ea1f3828",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "2.0250652668660973"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "a89031ba",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "5.462009737878593"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "8349d56c",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "33.230622092876644"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "25ae2dcd",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "0.47509334787359064"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "25a040a7",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "11.294043186126423"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "8890451a",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "1.0473879890614215"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "5a59a6e8",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "34.478956423240135"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "0c8fb48a",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "max      11.310000"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "e235d07a",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "array(['2002', '2003', '2004', '2005'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "db2e085b",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
        "Length: 6252, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "e493cf71",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
        "Name: BETASTAR, Length: 6252, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "id": "8e97ef8d",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "Length: 6252, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,30 +863,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "75d3dd8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0.223030\n",
+       "1       0.195418\n",
+       "2       0.274718\n",
+       "3       0.216753\n",
+       "4       0.193993\n",
+       "          ...   \n",
+       "6247    0.471050\n",
+       "6248    0.105809\n",
+       "6249    0.094721\n",
+       "6250    0.086448\n",
+       "6251    0.291492\n",
+       "Name: NUSTAR, Length: 6252, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DB5[\"NUSTAR\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "89373497",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       15.406717\n",
+       "1       15.470883\n",
+       "2       15.300207\n",
+       "3       15.420935\n",
+       "4       15.475806\n",
+       "          ...    \n",
+       "6247    14.466163\n",
+       "6248    16.013226\n",
+       "6249    16.067440\n",
+       "6250    15.618913\n",
+       "6251    14.991418\n",
+       "Name: LCOULOMB, Length: 6252, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DB5[\"LCOULOMB\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "daf99fb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1.694\n",
+       "1       1.684\n",
+       "2       1.693\n",
+       "3       1.693\n",
+       "4       1.685\n",
+       "        ...  \n",
+       "6247    0.835\n",
+       "6248    2.454\n",
+       "6249    2.456\n",
+       "6250    1.651\n",
+       "6251    1.649\n",
+       "Name: RGEO, Length: 6252, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DB5[\"RGEO\"]"
    ]
@@ -895,6 +961,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a02a3be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "421e3824",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c65f39a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5781045",
    "metadata": {},
    "outputs": [],
    "source": []
